@@ -1,3 +1,11 @@
+2012-01-17  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
+	  
+
+	* ConsoleHelper.cs:
+	  Fixed NullReferenceException on empty command history.
+
 2012-01-12  WOnder93  <omosnacek@gmail.com>
 
 	* ConsoleHelper.cs:
